<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/back_disabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#B0000000"
        android:orientation="vertical"
        android:visibility="gone"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="191dp"></LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="169dp"
        android:layout_height="141dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_salir" />

    <TextView
        android:id="@+id/txtTotalAsignadas"
        android:layout_width="264dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:textStyle="italic"
        android:background="@drawable/borde_redondo"
        android:drawableStart="@drawable/ic_salir"
        android:paddingLeft="6dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/txt_cierre_asignadas"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/txtProcesadas"
        android:layout_width="264dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:paddingLeft="6dp"
        android:textStyle="italic"
        android:background="@drawable/borde_redondo"
        android:drawableStart="@drawable/ic_salir"
        android:text="@string/txt_cierre_realizadas"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalAsignadas" />

    <!--Pendientes vendrian siendo aquí en este layout las pendientes del bottonnav + las reasignadas-->
    <TextView
        android:id="@+id/txtPendientes"
        android:layout_width="264dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:paddingLeft="6dp"
        android:background="@drawable/borde_redondo"
        android:drawableStart="@drawable/ic_salir"
        android:text="@string/txt_cierre_pendientes"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProcesadas" />

    <TextView
        android:id="@+id/txtPend_envio"
        android:layout_width="264dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/borde_redondo"
        android:drawableStart="@drawable/ic_salir"
        android:paddingBottom="6dp"
        android:paddingLeft="6dp"
        android:textStyle="italic"
        android:text="@string/txt_cierre_pend_envio"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPendientes" />

    <Button
        android:id="@+id/btn_cierre"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/borde_redondo"
        android:drawableStart="@drawable/ic_salir"
        android:text="@string/btn_cerrar_ruta"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/pgB_cierre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPend_envio" />

    <ProgressBar
        android:id="@+id/pgB_cierre"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cierre" />

</androidx.constraintlayout.widget.ConstraintLayout>